--- a/MorathC_project2.html
+++ b/MorathC_project2.html
@@ -12,7 +12,7 @@
 </header>
 <article>
 <p>My mom is going to be going away on a trip. While she is gone, I need to feed her pets.</p>
-<p>The pets get fed at different times of the day. The dogs get fed three times a day, the cats twice a day and the birds once a day.</p>
+<p>The pets get fed once a day. Aaron is the petsitter.</p>
 </article>
 <footer>
     <p>04/15/2013, Cassandra Morath</p>
