Changed the HTML
I have a css extension error that I can't figure out.

--- a/MorathC_project2.html
+++ b/MorathC_project2.html
@@ -11,8 +11,8 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>My mom is going to be going away on a trip. While she is gone, I need to feed her pets.</p>
-<p>The pets get fed once a day. Aaron is the petsitter.</p>
+<p>My mom is going to be going away on a trip. While she is gone, the pet sitter, Aaron will feed the pets.If mom is still on vacation Aaron will also clean up after the pets. We are also going to keep track of how many pounds of food the pets are fed.</p>
+<p> </p>
 </article>
 <footer>
     <p>04/15/2013, Cassandra Morath</p>
